{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 36,
  "lineage": "1efed4cb-f175-a978-898e-86998c1ad74c",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b43a8787121248ec",
            "domain": "vpc",
            "id": "eipalloc-02bc322d4f17d800a",
            "network_interface": "eni-0a2afe94d188bc944",
            "private_dns": "ip-10-100-1-12.eu-west-1.compute.internal",
            "private_ip": "10.100.1.12",
            "public_dns": "ec2-54-72-81-113.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.72.81.113",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this_instance",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f630a3f40b1eb0b8",
            "arn": "arn:aws:ec2:eu-west-1:197423400318:instance/i-082c99ca105152737",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-082c99ca105152737",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "homev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b0deafb1c305b72c",
            "private_dns": "ip-10-100-1-10.eu-west-1.compute.internal",
            "private_ip": "10.100.1.10",
            "public_dns": "ec2-34-242-124-153.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.242.124.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00977f527e5871e44",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a0244401e3699e48",
            "tags": {
              "Name": "raid-vpn-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d338b744f71983ec"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.public",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f630a3f40b1eb0b8",
            "arn": "arn:aws:ec2:eu-west-1:197423400318:instance/i-0a9329ab9bf5110be",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a9329ab9bf5110be",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "homev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b890a648879f8fe2",
            "private_dns": "ip-10-100-1-11.eu-west-1.compute.internal",
            "private_ip": "10.100.1.11",
            "public_dns": "ec2-34-241-26-154.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.241.26.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08adf2ff6537f8397",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a0244401e3699e48",
            "tags": {
              "Name": "raid-ci-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d338b744f71983ec"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.public",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f630a3f40b1eb0b8",
            "arn": "arn:aws:ec2:eu-west-1:197423400318:instance/i-015c179c9326cfc26",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-015c179c9326cfc26",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "homev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a1286e05817cba6b",
            "private_dns": "ip-10-100-1-133.eu-west-1.compute.internal",
            "private_ip": "10.100.1.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04ed010b840e594f2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085d9ba2b36ff9601",
            "tags": {
              "Name": "raid-web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d338b744f71983ec"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.public",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0a51501033d392d41",
            "owner_id": "197423400318",
            "tags": {
              "Name": "raid"
            },
            "vpc_id": "vpc-042f2752654e63fa8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02bc322d4f17d800a",
            "id": "nat-0ad2cf1be110d3bde",
            "network_interface_id": "eni-0a2afe94d188bc944",
            "private_ip": "10.100.1.12",
            "public_ip": "54.72.81.113",
            "subnet_id": "subnet-0a0244401e3699e48",
            "tags": {
              "Name": "raid-nat-eu-west-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.my_gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02513a8f321a3a76c",
            "owner_id": "197423400318",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ad2cf1be110d3bde",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "raid-private-route-table"
            },
            "vpc_id": "vpc-042f2752654e63fa8"
          },
          "dependencies": [
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0705d67fcb1e4965f",
            "owner_id": "197423400318",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ad2cf1be110d3bde",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "raid-private-route-table"
            },
            "vpc_id": "vpc-042f2752654e63fa8"
          },
          "dependencies": [
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06262dd3c9bd9f613",
            "owner_id": "197423400318",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a51501033d392d41",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "raid-public-route-table"
            },
            "vpc_id": "vpc-042f2752654e63fa8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_gw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be2a15f919bb3f3c",
            "route_table_id": "rtb-02513a8f321a3a76c",
            "subnet_id": "subnet-085d9ba2b36ff9601"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.my_gw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_route",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d570fdf1eb354cc2",
            "route_table_id": "rtb-0705d67fcb1e4965f",
            "subnet_id": "subnet-0f31cd80538bf7c48"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.my_gw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_route",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe777611967c3ca2",
            "route_table_id": "rtb-06262dd3c9bd9f613",
            "subnet_id": "subnet-0a0244401e3699e48"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_gw",
            "module.vpc.aws_route_table.route",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080681cceb1a0c367",
            "route_table_id": "rtb-06262dd3c9bd9f613",
            "subnet_id": "subnet-06e54b2294dbdb77c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_gw",
            "module.vpc.aws_route_table.route",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:197423400318:security-group/sg-02ce7636d553fd476",
            "description": "raid-lan",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ce7636d553fd476",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.100.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Allow form lan-to-lan",
            "name_prefix": null,
            "owner_id": "197423400318",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "raid-private-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-042f2752654e63fa8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:197423400318:security-group/sg-0d338b744f71983ec",
            "description": "raid-public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d338b744f71983ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1194,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              },
              {
                "cidr_blocks": [
                  "31.210.181.203/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Allow from  public",
            "name_prefix": null,
            "owner_id": "197423400318",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "raid-public-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-042f2752654e63fa8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:197423400318:subnet/subnet-085d9ba2b36ff9601",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.100.1.128/26",
            "id": "subnet-085d9ba2b36ff9601",
            "map_public_ip_on_launch": false,
            "owner_id": "197423400318",
            "tags": {
              "Name": "raid-private-eu-west-1a"
            },
            "vpc_id": "vpc-042f2752654e63fa8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:197423400318:subnet/subnet-0f31cd80538bf7c48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.100.1.192/26",
            "id": "subnet-0f31cd80538bf7c48",
            "map_public_ip_on_launch": false,
            "owner_id": "197423400318",
            "tags": {
              "Name": "raid-private-eu-west-1b"
            },
            "vpc_id": "vpc-042f2752654e63fa8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:197423400318:subnet/subnet-0a0244401e3699e48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.100.1.0/26",
            "id": "subnet-0a0244401e3699e48",
            "map_public_ip_on_launch": true,
            "owner_id": "197423400318",
            "tags": {
              "Name": "raid-public-eu-west-1a"
            },
            "vpc_id": "vpc-042f2752654e63fa8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:197423400318:subnet/subnet-06e54b2294dbdb77c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.100.1.64/26",
            "id": "subnet-06e54b2294dbdb77c",
            "map_public_ip_on_launch": true,
            "owner_id": "197423400318",
            "tags": {
              "Name": "raid-public-eu-west-1b"
            },
            "vpc_id": "vpc-042f2752654e63fa8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:197423400318:vpc/vpc-042f2752654e63fa8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.1.0/24",
            "default_network_acl_id": "acl-0a3e11e505da9634a",
            "default_route_table_id": "rtb-07645b48923198568",
            "default_security_group_id": "sg-0e38b87a15fc1c3b1",
            "dhcp_options_id": "dopt-6dad6809",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-042f2752654e63fa8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07645b48923198568",
            "owner_id": "197423400318",
            "tags": {
              "Name": "raid"
            }
          }
        }
      ]
    }
  ]
}